--- a/areas/mem.org
+++ b/areas/mem.org
@@ -85,3 +85,4 @@ the work-queue function from itself via =schedule_delayed_work=.
 ** TODO Create tracepoints for page_pool
 
 ** TODO Create bpftrace scripts monitoring page_pool stats (via tracepoints)
+#+INCLUDE: "../sitemap.org" :minlevel 1
