--- a/areas/xdp-tutorial.org
+++ b/areas/xdp-tutorial.org
@@ -153,3 +153,4 @@ Things like
 - Drop monitor (when that lands)
 - How to monitor what a running eBPF program is doing
 
+#+INCLUDE: "../sitemap.org" :minlevel 1
