--- a/people.org
+++ b/people.org
@@ -90,3 +90,4 @@ Drivers that will get XDP and use page_pool:
 
 Drivers with XDP and page_pool usage:
  - driver: netsec board: Socionext DeveloperBox
+#+INCLUDE: "sitemap.org" :minlevel 1
