--- a/planning.org
+++ b/planning.org
@@ -58,3 +58,4 @@ This document tries to get an overview on who is working on what.
 * BPF-helper: OvS lookup
 - Assigned: Nobody
 
+#+INCLUDE: "sitemap.org" :minlevel 1
