--- a/student-projects.org
+++ b/student-projects.org
@@ -52,3 +52,4 @@ directory of the kernel source tree, or the BPF selftests. See:
 
 - [[id:6b723feb-c079-46c5-b64f-d5a10fb83f92][Usability of programs in samples/bpf]]
 - [[id:66ba72d4-a1ab-4627-ac03-89fed5aa8b23][BPF-selftests - top-level TODOs]]
+#+INCLUDE: "sitemap.org" :minlevel 1
