--- a/planning.org
+++ b/planning.org
@@ -5,57 +5,62 @@
 
 This document tries to get an overview on who is working on what.
 
-* Multiple-XDP program on a single NIC
+* Items being actively worked on
+
+** Multiple-XDP program on a single NIC
 - Assigned: Toke
 
-* XDP clone+multicast
-- Assigned: Nobody
-
-* BPF-helper: Conntrack lookup
+** BPF-helper: Conntrack lookup
 - Assigned: Matt Cover <werekraken@gmail.com>
 
-* XDP egress hook/programs
+** XDP egress hook/programs
 - Assigned: Ahern + jason Wang
 
-* XDP-feature bits
+** XDP-feature bits
 - Assigned: Maybe Anton (Linode)
 
-* Consistency for statistics with XDP
+** Consistency for statistics with XDP
 - Assigned: Lorenzo
 - David Ahern was working on this, but currently dropped.
 
-* BPF-helper: Bridge lookup
+** BPF-helper: Bridge lookup
 - Assigned: Lorenzo
 
-* XDP-data-hard-end
-- Assigned: nobody
-- Needed for multi-frame
-- Needed for SKB outside drivers
-
-* Better "TX" ndo_xdp_xmit resource management
+** Better "TX" ndo_xdp_xmit resource management
 - Assigned: Toke / Magnus
 - Stalled on queue work from Intel (Magnus)
-* SKB outside drivers
+
+** SKB outside drivers
 - Assigned: Jesper
 - Blocked on: XDP-data-hard-end
 - Blocked on: BTF HW-offload feature
 
-* NIC BTF HW-offload feature
+** NIC BTF HW-offload feature
 - Assigned: Tom Herbert (Intel) (working group under ZabiPlane)
 
-* page_pool: measure and optimize performance
+** page_pool: measure and optimize performance
 - Assigned: Jesper
 
-* page_pool: use in SKB free/return path
+** page_pool: use in SKB free/return path
 - Assigned: Ilias (Linaro) and Lorenzo
 
-* page_pool: add stats
+** page_pool: add stats
 - Assigned: Jonathan (Facebook)
 
-* XDP multi-frame work
+** XDP multi-frame work
 - Assigned: Amazon ("Jubran, Samih" <sameehj@amazon.com>)
 
-* BPF-helper: OvS lookup
+* Not being actively worked on
+** XDP clone+multicast
 - Assigned: Nobody
+
+** XDP-data-hard-end
+- Assigned: nobody
+- Needed for multi-frame
+- Needed for SKB outside drivers
+
+** BPF-helper: OvS lookup
+- Assigned: Nobody
+
 
 #+INCLUDE: "sitemap.org" :minlevel 1
