areas/arm64: Boot workaround on v5.2 and above for board_nxp_ls1088
Adding this extra boot param allowed me to boot devel kernel
from net-next v5.7.0-rc1.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/arm64/board_nxp_ls1088/nxp-board01-notes.org
+++ b/areas/arm64/board_nxp_ls1088/nxp-board01-notes.org
@@ -35,6 +35,18 @@ Error messages in dmesg looks like this:
  arm-smmu 5000000.iommu:  GFSR 0x80000002, GFSYNR0 0x00000002
 #+end_example
 
+*** Boot workaround on v5.2 and above
+
+There is a kernel boot parameter =arm-smmu.disable_bypass=0= that disable
+this behaviour (allowing insecure mode).
+
+Fortunately this board have a bootscript 'ls1088ardb_boot.scr', which allows
+easy addition of extra boot args via U-Boot env 'othbootargs':
+
+#+begin_src sh
+ setenv othbootargs arm-smmu.disable_bypass=0
+#+end_src
+
 * Kernel config adjustments
 
 Platform selection:
